--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Dashboard</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="#">
+  <!-- remove above line when going live -->
 </head>
 <body>
-  <h1>Hello World</h1>
+  <h1>GB AoE2 Dashboard</h1>
   <script src="script.js"></script>    
 </body>
 </html>
