Added basic html divs and finished the basic leaderboard API request

--- a/index.html
+++ b/index.html
@@ -10,7 +10,57 @@
   <!-- remove above line when going live -->
 </head>
 <body>
-  <h1>GB AoE2 Dashboard</h1>
+  
+  <div class="navbar">
+    <span><h2>Logo</h2></span>
+    <span><h1>GB AoE2 Dashboard Beta</h1></span>
+    <span><h2>Steam sign on</h2></span>
+  </div>
+
+  <div class="container">
+    <div class="lh-side">
+      <div class="players">
+        <h3>Players</h3>
+        <ul>
+          <li>Player 1</li>
+          <li>Player 2</li>
+          <li>Player 3</li>
+        </ul>
+      </div>
+      <div class="leaderboard">
+        <h3>Leaderboard</h3>
+        <ul id="leaderboard-list">
+        </ul>
+      </div>
+    </div>
+    <div class="current-games">
+      <h3>Current Games</h3>
+      <ul>
+        <li>Game 1</li>
+        <li>Game 2</li>
+        <li>Game 3</li>
+      </ul>
+    </div>
+    <div class="rh-side">
+      <div class="recent-achievements">
+        <h3>Recent Achievements</h3>
+        <ul>
+          <li>Achievement 1</li>
+          <li>Achievement 2</li>
+          <li>Achievement 3</li>
+        </ul>
+      </div>
+      <div class="chat">
+        <h3>Chat</h3>
+        <ul>
+          <li>Chat 1</li>
+          <li>Chat 2</li>
+          <li>Chat 3</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
   <script src="script.js"></script>    
 </body>
 </html>
