Happy with 1v1 game header styling. Imported google font

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="#">
   <!-- remove above line when going live -->
+  <script src="script.js" defer></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>  
+  <link href="https://fonts.googleapis.com/css2?family=Arimo&display=swap" rel="stylesheet">
 </head>
 <body>
   
@@ -37,13 +41,13 @@
       <h3>Current Games</h3>
       <div class="live-game-1v1">
         <div class="game-header">
-          <span><img src="assets/images/Civs/britons.png" alt="Britons civilisation"></span>
-          <span><p class="player p1">1</p></span>
-          <span><h3>Player 1</h3></span>
-          <span><h2>Vs</h2></span>
-          <span><h3>Player 2</h3></span>
-          <span><p class="player p2">2</p></span>
-          <span><img src="assets/images/Civs/chinese.png" alt="Britons civilisation"></span>
+          <img src="assets/images/Civs/britons.png" alt="Britons civilisation">
+          <p class="player p1">1</p>
+          <h3>Player 1</h3>
+          <h2>Vs</h2>
+          <h3>Player 2</h3>
+          <p class="player p2">2</p>
+          <img src="assets/images/Civs/chinese.png" alt="Britons civilisation">
         </div>
       </div>
 
@@ -66,8 +70,6 @@
         </ul>
       </div>
     </div>
-  </div>
-
-  <script src="script.js"></script>    
+  </div> 
 </body>
 </html>
