Added elo, country and game-info divs & separated out CSS files for better readability

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dashboard</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/CSS/style.css">
   <link rel="shortcut icon" href="#">
   <!-- remove above line when going live -->
   <script src="script.js" defer></script>
@@ -47,7 +47,26 @@
           <h2>Vs</h2>
           <h3>Player 2</h3>
           <p class="player p2">2</p>
-          <img src="assets/images/Civs/chinese.png" alt="Britons civilisation">
+          <img src="assets/images/Civs/chinese.png" alt="Chinese civilisation">
+        </div>
+        <div class="elo">
+          <p>2011</p>
+          <p>ELO</p>
+          <p>1962</p>
+        </div>
+        <div class="country">
+          <img src="assets/images/Flags/gb-nir.png" alt="GB-Nir Flag">
+          <p>GB</p>
+          <p>Country</p>
+          <p>UA</p>
+          <img src="assets/images/Flags/ua.png" alt="Ua Flag">
+        </div>
+        <div class="game-info">
+          <p>Map: Arabia</p>
+          <p> | </p>
+          <p>Server: UK West</p>
+          <p> | </p>
+          <p>Spectate</p>
         </div>
       </div>
 
