--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
         </ul>
       </div>
     </div>
-    <div class="current-games">
-      <h3>Current Games</h3>
+    <div id="current-games">
       <div class="live-game-1v1">
         <div class="game-header">
           <img src="assets/images/Civs/britons.png" alt="Britons civilisation">
