Created working time elapsed functionality

--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
         </div>
         <div class="country">
           <img src="assets/images/Flags/gb-nir.png" alt="GB-Nir Flag">
-          <p>GB</p>
           <p>Country</p>
-          <p>UA</p>
           <img src="assets/images/Flags/ua.png" alt="Ua Flag">
         </div>
         <div class="game-info">
@@ -66,6 +64,9 @@
           <p>Server: UK West</p>
           <p> | </p>
           <p>Spectate</p>
+        </div>
+        <div class="game-time">
+          <p>Started 5m ago</p>
         </div>
       </div>
 
