--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>  
   <link href="https://fonts.googleapis.com/css2?family=Arimo&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/25dfb2bacb.js" crossorigin="anonymous"></script>
 </head>
 <body>
   
@@ -38,7 +39,7 @@
       </div>
     </div>
     <div id="current-games">
-      <div class="live-game-1v1">
+      <div class="live-game">
         <div class="game-header">
           <img src="assets/images/Civs/britons.png" alt="Britons civilisation">
           <p class="player p1">1</p>
@@ -54,22 +55,75 @@
           <p>1962</p>
         </div>
         <div class="country">
-          <img src="assets/images/Flags/gb-nir.png" alt="GB-Nir Flag">
+          <img id="country-flag" src="assets/images/Flags/gb-nir.png" alt="GB-Nir Flag">
           <p>Country</p>
-          <img src="assets/images/Flags/ua.png" alt="Ua Flag">
+          <img id="country-flag" src="assets/images/Flags/ua.png" alt="Ua Flag">
         </div>
         <div class="game-info">
-          <p>Map: Arabia</p>
-          <p> | </p>
-          <p>Server: UK West</p>
-          <p> | </p>
-          <p>Spectate</p>
+          <p><i class="fa-solid fa-earth-americas"></i> Arabia | <i class="fa-solid fa-server"></i> UK West | Spectate</p>
         </div>
         <div class="game-time">
           <p>Started 5m ago</p>
         </div>
       </div>
-
+      <div class="live-game">
+        <div class="team-game-header">
+          <h3>Team 1</h3>
+          <h2>Vs</h2>
+          <h3>Team 2</h3>
+        </div>
+        <div class="team-game-player-row">
+          <img id="country-flag" src="assets/images/Flags/gb-nir.png" alt="">
+          <img src="assets/images/Civs/britons.png" alt="">
+          <p class="player p1">1</p>
+          <p>Player 1</p>
+          <p>Player 8</p>
+          <p class="player p8">8</p>
+          <img src="assets/images/Civs/chinese.png" alt="">
+          <img id="country-flag" src="assets/images/Flags/ua.png" alt="">
+        </div>
+        <div class="team-game-player-row">
+          <img id="country-flag" src="assets/images/Flags/gb-nir.png" alt="">
+          <img src="assets/images/Civs/sicilians.png" alt="">
+          <p class="player p3">3</p>
+          <p>Player 3</p>
+          <p>Player 6</p>
+          <p class="player p6">6</p>
+          <img src="assets/images/Civs/turks.png" alt="">
+          <img id="country-flag" src="assets/images/Flags/ng.png" alt="">
+        </div>
+        <div class="team-game-player-row">
+          <img id="country-flag" src="assets/images/Flags/gb-nir.png" alt="">
+          <img src="assets/images/Civs/lithuanians.png" alt="">
+          <p class="player p5">5</p>
+          <p>Player 5</p>
+          <p>Player 4</p>
+          <p class="player p4">4</p>
+          <img src="assets/images/Civs/burgundians.png" alt="">
+          <img id="country-flag" src="assets/images/Flags/lk.png" alt="">
+        </div>
+        <div class="team-game-player-row">
+          <img id="country-flag" src="assets/images/Flags/gb-nir.png" alt="">
+          <img src="assets/images/Civs/burgundians.png" alt="">
+          <p class="player p7">7</p>
+          <p>Player 7</p>
+          <p>Player 2</p>
+          <p class="player p2">2</p>
+          <img src="assets/images/Civs/ethiopians.png" alt="">
+          <img id="country-flag" src="assets/images/Flags/au.png" alt="">
+        </div>
+        <div class="elo">
+          <p>2905</p>
+          <p>ELO (avg)</p>
+          <p>3045</p>
+        </div>
+        <div class="game-info">
+          <p><i class="fa-solid fa-earth-americas"></i> Arabia | Server: UK West | Spectate</p>
+        </div>
+        <div class="game-time">
+          <p>Started 5m ago</p>
+        </div>
+      </div>
     </div>
     <div class="rh-side">
       <div class="recent-achievements">
