added maps and restructred the team game html for use by javascript

--- a/index.html
+++ b/index.html
@@ -67,55 +67,67 @@
         </div>
       </div>
       <div class="live-game">
-        <div class="team-game-header">
-          <h3>Team 1</h3>
-          <h2>Vs</h2>
-          <h3>Team 2</h3>
-        </div>
-        <div class="team-game-player-row">
-          <img id="country-flag" src="assets/images/Flags/gb-nir.png" alt="">
-          <img src="assets/images/Civs/britons.png" alt="">
-          <p class="player p1">1</p>
-          <p>Player 1</p>
-          <p>Player 8</p>
-          <p class="player p8">8</p>
-          <img src="assets/images/Civs/chinese.png" alt="">
-          <img id="country-flag" src="assets/images/Flags/ua.png" alt="">
-        </div>
-        <div class="team-game-player-row">
-          <img id="country-flag" src="assets/images/Flags/gb-nir.png" alt="">
-          <img src="assets/images/Civs/sicilians.png" alt="">
-          <p class="player p3">3</p>
-          <p>Player 3</p>
-          <p>Player 6</p>
-          <p class="player p6">6</p>
-          <img src="assets/images/Civs/turks.png" alt="">
-          <img id="country-flag" src="assets/images/Flags/ng.png" alt="">
-        </div>
-        <div class="team-game-player-row">
-          <img id="country-flag" src="assets/images/Flags/gb-nir.png" alt="">
-          <img src="assets/images/Civs/lithuanians.png" alt="">
-          <p class="player p5">5</p>
-          <p>Player 5</p>
-          <p>Player 4</p>
-          <p class="player p4">4</p>
-          <img src="assets/images/Civs/burgundians.png" alt="">
-          <img id="country-flag" src="assets/images/Flags/lk.png" alt="">
-        </div>
-        <div class="team-game-player-row">
-          <img id="country-flag" src="assets/images/Flags/gb-nir.png" alt="">
-          <img src="assets/images/Civs/burgundians.png" alt="">
-          <p class="player p7">7</p>
-          <p>Player 7</p>
-          <p>Player 2</p>
-          <p class="player p2">2</p>
-          <img src="assets/images/Civs/ethiopians.png" alt="">
-          <img id="country-flag" src="assets/images/Flags/au.png" alt="">
-        </div>
-        <div class="elo">
-          <p>2905</p>
-          <p>ELO (avg)</p>
-          <p>3045</p>
+        <div class="team-game-teams">
+          <div class="team-game-team-column">
+            <div class="team-game-header">
+              <h3>Team 1</h3>
+            </div>
+            <div class="team-game-player">
+              <img id="country-flag" src="assets/images/Flags/gb-nir.png" alt="">
+              <img src="assets/images/Civs/britons.png" alt="">
+              <p class="player p1">1</p>
+              <p>Player 1</p>
+            </div>
+            <div class="team-game-player">
+              <img id="country-flag" src="assets/images/Flags/gb-nir.png" alt="">
+              <img src="assets/images/Civs/sicilians.png" alt="">
+              <p class="player p3">3</p>
+              <p>Player 3</p>
+            </div>
+            <div class="team-game-player">
+              <img id="country-flag" src="assets/images/Flags/gb-nir.png" alt="">
+              <img src="assets/images/Civs/lithuanians.png" alt="">
+              <p class="player p5">5</p>
+              <p>Player 5</p>
+            </div>
+            <div class="team-game-player">
+              <img id="country-flag" src="assets/images/Flags/gb-nir.png" alt="">
+              <img src="assets/images/Civs/burgundians.png" alt="">
+              <p class="player p7">7</p>
+              <p>Player 7</p>
+            </div>
+            <span class="team-game-avg-elo"><p>2905</p></span>
+          </div>     
+          <div class="team-game-team-column">
+            <div class="team-game-header">
+              <h3>Team 2</h3>
+            </div>
+            <div class="team-game-player">
+              <p>Player 8</p>
+              <p class="player p8">8</p>
+              <img src="assets/images/Civs/chinese.png" alt="">
+              <img id="country-flag" src="assets/images/Flags/ua.png" alt="">
+            </div>
+            <div class="team-game-player">
+              <p>Player 6</p>
+              <p class="player p6">6</p>
+              <img src="assets/images/Civs/turks.png" alt="">
+              <img id="country-flag" src="assets/images/Flags/ng.png" alt="">
+            </div>
+            <div class="team-game-player">
+              <p>Player 4</p>
+              <p class="player p4">4</p>
+              <img src="assets/images/Civs/burgundians.png" alt="">
+              <img id="country-flag" src="assets/images/Flags/lk.png" alt="">
+            </div>
+            <div class="team-game-player">
+              <p>Player 2</p>
+              <p class="player p2">2</p>
+              <img src="assets/images/Civs/ethiopians.png" alt="">
+              <img id="country-flag" src="assets/images/Flags/au.png" alt="">
+            </div>
+            <span class="team-game-avg-elo"><p>2905</p></span>
+          </div>
         </div>
         <div class="game-info">
           <p><i class="fa-solid fa-earth-americas"></i> Arabia | Server: UK West | Spectate</p>
