games now appearing in completed games

--- a/index.html
+++ b/index.html
@@ -139,23 +139,8 @@
         </div>
       </div>
     </div>
-    <div class="rh-side">
-      <div class="recent-achievements">
-        <h3>Recent Achievements</h3>
-        <ul>
-          <li>Achievement 1</li>
-          <li>Achievement 2</li>
-          <li>Achievement 3</li>
-        </ul>
-      </div>
-      <div class="chat">
-        <h3>Chat</h3>
-        <ul>
-          <li>Chat 1</li>
-          <li>Chat 2</li>
-          <li>Chat 3</li>
-        </ul>
-      </div>
+      <div id="recently-completed-games">
+        <h3>Recently Completed Games</h3>
     </div>
   </div> 
 </body>
