--- a/home.html
+++ b/home.html
@@ -51,6 +51,14 @@
     </div>
     <div class="current-games">
       <h3>Games in Progress</h3>
+      <div class="loader">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+        <div class="bar4"></div>
+        <div class="bar5"></div>
+        <div class="bar6"></div>
+      </div>
     </div>
     <div class="recently-completed-games">
       <h3>Recently Completed Games</h3>
