--- a/home.html
+++ b/home.html
@@ -27,14 +27,14 @@
   <div class="container">
     <div class="lh-side">
       <div class="players">
-        <h3 class="center-align">Active Players</h3>
+        <h3 class="title center-align">Active Players</h3>
         <table class="table table-striped">
           <tbody id="player-table-body">
           </tbody>
         </table>
       </div>
       <div class="leaderboard">
-        <h3 class="center-align">Leaderboard</h3>
+        <h3 class="title center-align">Leaderboard</h3>
         <div class="leaderboard-list">
           <table class="table table-striped">
             <thead>
@@ -50,7 +50,7 @@
       </div>
     </div>
     <div class="current-games">
-      <h3 class="center-align">Games in Progress</h3>
+      <h3 class="title center-align">Games in Progress</h3>
       <div class="loader">
         <div class="bar1"></div>
         <div class="bar2"></div>
@@ -61,7 +61,15 @@
       </div>
     </div>
     <div class="recently-completed-games">
-      <h3 class="center-align">Recently Completed Games</h3>
+      <h3 class="title center-align">Recently Completed Games</h3>
+      <div class="loader">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+        <div class="bar4"></div>
+        <div class="bar5"></div>
+        <div class="bar6"></div>
+      </div>
     </div>
   </div> 
 </body>
