--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
   <!-- <meta http-equiv="refresh" content="60"> -->
   <title>Dashboard</title>
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
-  <link rel="stylesheet" href="/CSS/style.css">
+  <link rel="stylesheet" href="/style.css">
   <link rel="shortcut icon" href="#">
   <!-- remove above line when going live -->
   <script src="script.js" defer></script>
