--- a/home.html
+++ b/home.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <meta http-equiv="refresh" content="60"> -->
   <title>Dashboard</title>
-  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
   <link rel="stylesheet" href="/style.css">
   <link rel="shortcut icon" href="#">
   <!-- remove above line when going live -->
@@ -23,13 +22,20 @@
   <div class="navbar">
     <span><img id="logo" src="https://aoe2gb.s3.eu-west-2.amazonaws.com/images/aoe2gblogo.png" alt="logo"></span>
     <span><h1>GB AoE2 Dashboard Beta</h1></span>
-    <span><h2>Info</h2></span>
+    <span><h2 id="about-btn">About</h2></span>
+  </div>
+
+  <div id="about-txt" class="display-none">
+    <p>This website automatically refreshes every minute. Please message me on discord (Rhea#2574) if you have any questions. 
+    Data is sourced from AoE2.net APIs. <i class="fa-brands fa-github"></i> <a href="https://github.com/sebnaylor/AoE2GB" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
+    Due to conditons from AoE2.net, only games started in the last 30 mins can be shown.
+    </p>
   </div>
 
   <div class="container">
     <div class="lh-side">
+      <h3 class="title center-align">Active Players</h3>
       <div class="players">
-        <h3 class="title center-align">Active Players</h3>
         <div id="players-loader" class="loader">
           <div class="bar1"></div>
           <div class="bar2"></div>
@@ -38,10 +44,8 @@
           <div class="bar5"></div>
           <div class="bar6"></div>
         </div>
-        <table class="table table-striped">
-          <tbody id="player-table-body">
-          </tbody>
-        </table>
+        <div id="status-table" class="table">
+        </div>
       </div>
       <div class="leaderboard">
         <h3 class="title center-align">1V1 RM Leaderboard</h3>
@@ -54,7 +58,7 @@
           <div class="bar6"></div>
         </div>
         <div class="leaderboard-list">
-          <table class="table table-striped">
+          <table id="leaderboard-table">
             <thead>
               <tr>
                 <th scope="col" class="left-align"><strong>Name</strong></th>
