--- a/home.html
+++ b/home.html
@@ -4,11 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <meta http-equiv="refresh" content="60"> -->
+  <meta http-equiv="refresh" content="60">
   <title>Dashboard</title>
   <link rel="stylesheet" href="/style.css">
-  <link rel="shortcut icon" href="#">
-  <!-- remove above line when going live -->
+  <link rel="icon" type="image/x-icon" href="https://aoe2gb.s3.eu-west-2.amazonaws.com/images/Arch.png">
   <script src="script.js" defer></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>  
@@ -22,13 +21,21 @@
   <div class="navbar">
     <span><img id="logo" src="https://aoe2gb.s3.eu-west-2.amazonaws.com/images/aoe2gblogo.png" alt="logo"></span>
     <span><h1>GB AoE2 Dashboard Beta</h1></span>
-    <span><h2 id="about-btn">About</h2></span>
+    <div class="navbar-buttons">
+      <span><h3 id="status-btn">Status</h3></span>
+      <span><h3 id="about-btn">About</h3></span>
+    </div>
   </div>
 
   <div id="about-txt" class="display-none">
     <p>This website automatically refreshes every minute. Please message me on discord (Rhea#2574) if you have any questions. 
     Data is sourced from AoE2.net APIs. <i class="fa-brands fa-github"></i> <a href="https://github.com/sebnaylor/AoE2GB" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
     Due to conditons from AoE2.net, only games started in the last 30 mins can be shown.
+    </p>
+  </div>
+
+  <div id="status-txt" class="display-none">
+    <p>Site not loading? If <a href="https://aoe2.net/" target="_blank" rel="noopener noreferrer">aoe2.net</a> is down or slow, this site will be too</p>
     </p>
   </div>
 
@@ -59,11 +66,7 @@
         </div>
         <div class="leaderboard-list">
           <table id="leaderboard-table">
-            <thead>
-              <tr>
-                <th scope="col" class="left-align"><strong>Name</strong></th>
-                <th scope="col" class="left-align"><strong>Elo</strong></th>
-              </tr>
+            <thead id="table-head">
             </thead>
             <tbody class="player-table-body">
             </tbody>
