refactored 1v1 styling and improved page responsivness and sizing

--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="refresh" content="60">
+  <!-- <meta http-equiv="refresh" content="60"> -->
   <title>Dashboard</title>
   <link rel="stylesheet" href="/style.css">
   <link rel="icon" type="image/x-icon" href="https://aoe2gb.s3.eu-west-2.amazonaws.com/images/Arch.png">
@@ -17,13 +17,14 @@
   <script src="https://kit.fontawesome.com/25dfb2bacb.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  
-  <div class="navbar">
-    <span><img id="logo" src="https://aoe2gb.s3.eu-west-2.amazonaws.com/images/aoe2gblogo.png" alt="logo"></span>
-    <span><h1>GB AoE2 Dashboard Beta</h1></span>
-    <div class="navbar-buttons">
-      <span><h3 id="status-btn">Status</h3></span>
-      <span><h3 id="about-btn">About</h3></span>
+  <div class="navbar-container">
+    <div class="navbar">
+      <span><img id="logo" src="https://aoe2gb.s3.eu-west-2.amazonaws.com/images/aoe2gblogo.png" alt="logo"></span>
+      <span><h1>GB AoE2 Dashboard Beta</h1></span>
+      <div class="navbar-buttons">
+        <span><h3 id="status-btn">Status</h3></span>
+        <span><h3 id="about-btn">About</h3></span>
+      </div>
     </div>
   </div>
 
