finished mvp on laptop

--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
 
   <div id="about-txt" class="display-none">
     <p>This website automatically refreshes every minute. Please message me on discord (Rhea#2574) if you have any questions. 
-    Data is sourced from AoE2.net APIs. <i class="fa-brands fa-github"></i> <a href="https://github.com/sebnaylor/AoE2GB" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
+    Data is sourced from AoE2.net APIs. <i class="fa-brands fa-github"></i> <a href="https://github.com/sebnaylor/AoE2GB" target="_blank" rel="noopener noreferrer">GitHub Repo</a>.
     Due to conditons from AoE2.net, only games started in the last 30 mins can be shown.
     </p>
   </div>
