--- a/home.html
+++ b/home.html
@@ -4,15 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="refresh" content="60">
+  <!-- <meta http-equiv="refresh" content="60"> -->
   <title>GBAoe2.net</title>
   <link rel="stylesheet" href="/style.css">
   <link rel="icon" type="image/x-icon" href="https://aoe2gb.s3.eu-west-2.amazonaws.com/images/Arch.png">
   <script src="script.js" defer></script>
+  <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>  
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@100;300&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/25dfb2bacb.js" crossorigin="anonymous"></script>
 </head>
@@ -30,8 +29,8 @@
 
   <div id="about-txt" class="display-none">
     <p>This website automatically refreshes every minute. Please message me on discord (Rhea#2574) if you have any questions. 
-    Data is sourced from AoE2.net APIs. <i class="fa-brands fa-github"></i> <a href="https://github.com/sebnaylor/AoE2GB" target="_blank" rel="noopener noreferrer">GitHub Repo</a>.
-    Due to conditons from AoE2.net, only games started in the last 30 mins can be shown.
+    Data is sourced from AoE2.net APIs. Due to conditons from AoE2.net, only games started in the last 30 mins can be shown.
+    <i class="fa-brands fa-github"></i> <a href="https://github.com/sebnaylor/AoE2GB" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
     </p>
   </div>
 
