--- a/home.html
+++ b/home.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <meta http-equiv="refresh" content="60"> -->
-  <title>GBAoe2.net</title>
+  <meta http-equiv="refresh" content="60">
+  <title>gbaoe2.net</title>
   <link rel="stylesheet" href="/style.css">
   <link rel="icon" type="image/x-icon" href="https://aoe2gb.s3.eu-west-2.amazonaws.com/images/Arch.png">
   <script src="script.js" defer></script>
