--- a/home.html
+++ b/home.html
@@ -13,6 +13,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>  
   <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@100;300&display=swap" rel="stylesheet">
+  <meta name="description" content="The honme dashboard of the GB Aoe2 community dashboard. Find, view and spectate your clan-mates' gameplay!">
   <script src="https://kit.fontawesome.com/25dfb2bacb.js" crossorigin="anonymous"></script>
 </head>
 <body>
