--- a/home.html
+++ b/home.html
@@ -14,6 +14,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>  
   <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@100;300&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/25dfb2bacb.js" crossorigin="anonymous"></script>
+  <meta name="description" content="The dashboard home of the GB Age of Empires 2 community. Find, view and spectate your clan-mates games."> 
 </head>
 <body>
   <div class="navbar-container">
