created json file, moved non API or global var scripts to functions.js, some syntax improvements

--- a/home.html
+++ b/home.html
@@ -8,8 +8,8 @@
   <title>GBAoe2.net</title>
   <link rel="stylesheet" href="/style.css">
   <link rel="icon" type="image/x-icon" href="https://aoe2gb.s3.eu-west-2.amazonaws.com/images/Arch.png">
-  <script src="script.js" defer></script>
-  <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+  <script type="module" src="script.js" defer></script>
+  <script type="module" src="functions.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>  
   <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@100;300&display=swap" rel="stylesheet">
