removed unnecessary files in prep for migration to netlify

--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="refresh" content="60">
   <title>GBAoe2.net</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="./style.css">
   <link rel="icon" type="image/x-icon" href="https://aoe2gb.s3.eu-west-2.amazonaws.com/images/Arch.png">
   <script type="module" src="script.js" defer></script>
   <script type="module" src="functions.js"></script>
