--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="refresh" content="60">
+  <meta http-equiv="refresh" content="120">
   <title>GBAoe2.net</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="icon" type="image/x-icon" href="https://aoe2gb.s3.eu-west-2.amazonaws.com/images/Arch.png">
@@ -29,7 +29,7 @@
   </div>
 
   <div id="about-txt" class="display-none">
-    <p>This website automatically refreshes every minute. Please message me on discord (Rhea#2574) if you have any questions. 
+    <p>This website automatically refreshes every 2 minutes. Please message me on discord (Rhea#2574) if you have any questions. 
     Data is sourced from AoE2.net APIs. Due to conditons from AoE2.net, only games started in the last 30 mins can be shown.
     <i class="fa-brands fa-github"></i> <a href="https://github.com/sebnaylor/AoE2GB" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
     </p>
